--- a/src/Chat.css
+++ b/src/Chat.css
@@ -15,14 +15,17 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 70vh;
-  width: 50%;
   justify-content: flex-end;
   align-items: center;
-  background-color: white;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2%;
+    width: 25vw;
+    height: 55vh;
+    background-color: rgb(235, 237, 240);
+    border-radius: 3%;
+    box-shadow: 1px 3px 3px 8px grey;
+    text-align: center;
 }
 
 .chat-box {
@@ -30,25 +33,32 @@
   flex: 1;
   padding: 10px;
   overflow-y: auto;
-  border-bottom: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+
 }
 
 .message {
+ max-width: 60%;
   padding: 10px;
-  border-radius: 10px;
+  border-radius: 20px;
   margin: 5px 0;
+  display: inline-block;
+  word-wrap: break-word;
 }
 
 .message.user {
-  align-self: flex-end;
-  background-color: #dcf8c6;
-  border: 1px solid #34b7f1;
+ align-self: flex-end;
+  background-color: #0084ff;
+  color: white;
+  border-bottom-right-radius: 2px;
 }
 
 .message.bot {
-  align-self: flex-start;
-  background-color: #fff;
-  border: 1px solid #ccc;
+ align-self: flex-start;
+  background-color: green;
+  color: black;
+  border-bottom-left-radius: 2px;
 }
 
 .form {
@@ -59,17 +69,24 @@
 
 .input {
   flex: 1;
+  margin-top: 2vh;
+  width: 70%;
   padding: 10px;
   border-radius: 5px;
   border: 1px solid #ccc;
   margin-right: 10px;
+  margin-left: 15px;
 }
 
 .button {
-  padding: 10px 20px;
-  border-radius: 5px;
-  border: none;
-  background-color: #34b7f1;
-  color: #fff;
-  cursor: pointer;
+    margin-top: 2.5vh;
+    margin-right: 1.4vw;
+    padding: 6px;
+    width: 25%;
+    border: none;
+    cursor: pointer;
+    color: white;
+    border-radius: 20px;
+    box-shadow: 1px 1px 3px 3px grey;
+    background-color: #149cf7;
 }
